# abiogenesis

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
docs/: index.html  styles.css
src/: command_cache.rs  command_router.rs  config.rs  execution_context.rs  executor.rs  http_client.rs  lib.rs  llm_generator.rs  main.rs  permission_ui.rs  providers.rs
tests/: integration_test.rs
