[package]
name = "abiogenesis"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
which = "4.4"
dirs = "5.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
