[package]
name = "abiogenesis"
version = "0.1.0"
edition = "2024"

[lib]
name = "abiogenesis"
path = "src/lib.rs"

[[bin]]
name = "ergo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
which = "4.4"
dirs = "5.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
